fix(fgc-181): added new optional property "actionAlignRight" to the header content
if actionAlignRight: true position of dynamic action component will be align to right and in case has teleport elements, after it.

--- a/projects/fusion-ui/components/layout/v4/components/layout-header/layout-header.component.scss
+++ b/projects/fusion-ui/components/layout/v4/components/layout-header/layout-header.component.scss
@@ -52,6 +52,10 @@ $headerHeight: 64px;
         color: $fu-nav-text-primary;
     }
 
+    .fu-action-wrapper-after-teleports{
+        order: 1;
+    }
+
     .fu-flex-align-right{
         margin-left: auto;
     }
